# -*- mode: org -*-

* v0.4.0    UNRELEASED

- Class tags are now automatically abbreviated when being stored in
  the database because that gives friendlier results when querying it
  direct.

  It was already possible to do that before by implementing the
  generic functions ~closql--class-to-sql~ and ~closql--sql-to-class~.
  These functions were replaced by the functions ~closql--abbrev-class~
  and ~closql--expand-abbrev~, which have different signatures and allow
  subclasses to strip a common prefix and/or suffix by setting the
  object slots ~closql-class-prefix~ and ~closql-class-suffix~ instead of
  having to define methods for these subclasses.

- The function ~closql--where-class-in~ isn't merely intended for
  internal use anymore and was renamed to ~closql-where-in-class~.

- The internal function ~closql--oref-default~ was removed.

- The function signature of ~closql--remake-instance~ changed.

* v0.3.3    2016/12/31

- Repository moved to https://github.com/emacscollective/closql.

* v0.3.2    2016/11/26

- Update links.

* v0.3.1    2016/11/03

- Fixed updating of rows in secondary tables when the key is ~nil~.

* v0.3.0    2016/10/25

- Setting the value of a slot whose value is stored in a secondary
  table no longer deletes and recreates all rows.

- ~closql--db-init~ no longer sets the primary key of secondary tables.

* v0.2.0    2016/09/02

- Text properties are now being removed when storing string in the
  database.

* v0.1.0    2016/04/15

- Initial public alpha release.